--- a/Summarize_Product_Reviews.ipynb
+++ b/Summarize_Product_Reviews.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmFWWe5u8XgaFTGcQX/4W+",
+      "authorship_tag": "ABX9TyOvIddiJu4B6YA8dCLfu6Qn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -268,6 +268,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Summarize multiple Product Reviews"
+      ],
+      "metadata": {
+        "id": "2SbFBJVJuIuC"
+      }
     },
     {
       "cell_type": "code",
