--- a/Sentiment_Analysis_LLM.ipynb
+++ b/Sentiment_Analysis_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMSDUExywdgib8y5YIQt4lN",
+      "authorship_tag": "ABX9TyNiRq/OaW4ieQJQRTw/8hRD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "id": "y7_XNDX9GLls",
         "outputId": "ac2e3d33-b8e3-4789-bff9-4eadad6ec287"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "0NH37_yBF8Vz"
       },
@@ -73,7 +73,7 @@
         "import openai\n",
         "\n",
         "# Set your OpenAI API key\n",
-        "openai.api_key = \"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\""
+        "openai.api_key = \"OpenAI Key\""
       ]
     },
     {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "7JTHm_mQGQT4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "CtXaY5hHGUS-"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
         "id": "sIpJMayMGbOv",
         "outputId": "1ed7e0cd-db6e-4a99-d7dd-9da108d2417b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
         "id": "eszC5orxIQ7X",
         "outputId": "841661f3-5d57-4b43-97d3-6c185e4f2dd3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +226,7 @@
         "id": "GicJvCv8IY8A",
         "outputId": "df5f351a-98cd-4b3b-ddfb-d08c9e622899"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +266,7 @@
         "id": "vFEFmUWtIdI2",
         "outputId": "310988ba-e6fa-43f4-f952-8b0e22c69340"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
         "id": "rR6kryL0Ioaw",
         "outputId": "e80721b7-30e6-4e28-8924-4347cc2430b8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +368,7 @@
         "id": "IfKdxAUOI-eV",
         "outputId": "4668d128-a41c-4b04-ad7e-7778db0f759b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +429,7 @@
       "metadata": {
         "id": "Y8IPgKY4JE2Q"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -455,7 +455,7 @@
         "id": "Pl2tlKdzJHFo",
         "outputId": "d0f977fd-1f68-4589-ed24-ced7aae426c5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +482,7 @@
         "id": "Kj0ydfF9JLWv",
         "outputId": "da4c8480-a06f-409c-bb3c-ada206e2fea1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +507,7 @@
       "metadata": {
         "id": "DMZUAUYwJN--"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -543,7 +543,7 @@
         "id": "NFts2NuZJXt8",
         "outputId": "c293478b-65d8-4bd6-bb9a-b42550d81a64"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,7 +571,7 @@
         "id": "f5l4DGF5Jzn1",
         "outputId": "7fddbc2f-e9b7-40df-99de-e44d0546669f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
