--- a/Language_Translation_LLM.ipynb
+++ b/Language_Translation_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLY8InYj2yuqnYXBbihFdv",
+      "authorship_tag": "ABX9TyOuTfA1xZbS5ewxwbvq5bD7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qchFZoA4kQ7Z",
-        "outputId": "2dc8a32d-373c-4fa9-a675-1a3da0b2b60e"
+        "outputId": "ce0e3f94-43ef-46d9-8238-7994c71e7d30"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting openai==0.27\n",
-            "  Downloading openai-0.27.0-py3-none-any.whl (70 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/70.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━\u001b[0m \u001b[32m61.4/70.1 kB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m70.1/70.1 kB\u001b[0m \u001b[31m1.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: requests>=2.20 in /usr/local/lib/python3.10/dist-packages (from openai==0.27) (2.31.0)\n",
+            "Requirement already satisfied: openai==0.27 in /usr/local/lib/python3.10/dist-packages (0.27.0)\n",
+            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.10/dist-packages (from openai==0.27) (2.31.0)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from openai==0.27) (4.66.2)\n",
             "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from openai==0.27) (3.9.3)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai==0.27) (3.3.2)\n",
@@ -56,9 +54,7 @@
             "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.27) (1.4.1)\n",
             "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.27) (6.0.5)\n",
             "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.27) (1.9.4)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.27) (4.0.3)\n",
-            "Installing collected packages: openai\n",
-            "Successfully installed openai-0.27.0\n"
+            "Requirement already satisfied: async-timeout<5.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.27) (4.0.3)\n"
           ]
         }
       ],
@@ -77,7 +73,7 @@
       "metadata": {
         "id": "lwKzETFDlJtV"
       },
-      "execution_count": 2,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -95,7 +91,7 @@
       "metadata": {
         "id": "1axnDTtBlQM5"
       },
-      "execution_count": 3,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -122,9 +118,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3JRVPWKjlqiD",
-        "outputId": "5b538836-a8d3-421b-c7d5-86622b56c64d"
+        "outputId": "2dea15e2-c431-4019-b2a9-e56a741762ec"
       },
-      "execution_count": 7,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,9 +146,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r41jTWdSlV3b",
-        "outputId": "7a35460c-1f36-4e96-9306-c497b731def2"
+        "outputId": "0b29bc09-1df9-4792-ab02-ae093c16415a"
       },
-      "execution_count": 4,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_tNt1XzljLS",
-        "outputId": "5d5e842f-103c-45e8-e899-fd937b88a91f"
+        "outputId": "e72e71d8-c2fc-4af9-c9f0-9be2cc455cf2"
       },
-      "execution_count": 5,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ibsP-gFMlmrM",
-        "outputId": "32d4e80e-7270-45ed-f4b4-14dc1e8f9992"
+        "outputId": "64166ba7-1b1e-4586-e291-016edf8ef766"
       },
-      "execution_count": 6,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,9 +236,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NY2ThjzVlxap",
-        "outputId": "d52115ba-993f-4ea9-b50f-fec10321d5c7"
+        "outputId": "25945941-7f15-4b4e-be46-bedb822509d2"
       },
-      "execution_count": 8,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +274,7 @@
       "metadata": {
         "id": "5kIPwAStmHDx"
       },
-      "execution_count": 9,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -301,9 +297,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7h_zcYIZmJ7E",
-        "outputId": "4db72a97-9dc0-4425-8a0e-25dce39d25d6"
+        "outputId": "99e72cf5-3378-4ee9-d802-4902f9d5e6ca"
       },
-      "execution_count": 10,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,12 +307,11 @@
           "text": [
             "Original message (This is French.): La performance du système est plus lente que d'habitude.\n",
             "English: \"The system performance is slower than usual.\"\n",
-            "\n",
             "Korean: \"시스템 성능이 평소보다 느립니다.\" \n",
             "\n",
             "Original message (This is Spanish.): Mi monitor tiene píxeles que no se iluminan.\n",
             "English: \"My monitor has pixels that do not light up.\"\n",
-            "Korean: \"내 모니터에는 불이 켜지지 않는 픽셀이 있습니다.\" \n",
+            "Korean: \"내 모니터에는 빛나지 않는 픽셀이 있습니다.\" \n",
             "\n",
             "Original message (Italian): Il mio mouse non funziona\n",
             "English: My mouse is not working\n",
@@ -324,9 +319,9 @@
             "\n",
             "Original message (This is Polish.): Mój klawisz Ctrl jest zepsuty\n",
             "English: My Ctrl key is broken\n",
-            "Korean: 나의 Ctrl 키가 고장 났어요 \n",
+            "Korean: 제 Ctrl 키가 고장 났어요 \n",
             "\n",
-            "Original message (This is Chinese.): 我的屏幕在闪烁\n",
+            "Original message (This is Chinese. It translates to \"My screen is flickering\" in English.): 我的屏幕在闪烁\n",
             "English: My screen is flickering\n",
             "Korean: 내 화면이 깜박거립니다 \n",
             "\n"
@@ -359,9 +354,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aIoZXsiymQ8i",
-        "outputId": "933577ff-e2bd-4f24-d0f3-2b2d55928d68"
+        "outputId": "1c9aafe9-7c96-493a-d319-e9446d3da061"
       },
-      "execution_count": 11,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +364,7 @@
           "text": [
             "Dear Sir/Madam,\n",
             "\n",
-            "I am writing to bring to your attention the specifications of the standing lamp. \n",
+            "I am writing to bring to your attention the specifications of the standing lamp that I have recently come across. \n",
             "\n",
             "Sincerely,\n",
             "Joe\n"
@@ -408,9 +403,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lSJhR6VJmeNS",
-        "outputId": "d0ccb0c5-956f-4ed0-d8e8-bcb9bf850c8f"
+        "outputId": "99b2c879-38f5-4086-9825-d47451c6ac42"
       },
-      "execution_count": 12,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,6 +437,60 @@
             "</body>\n",
             "</html>\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import display, Markdown, Latex, HTML, JSON\n",
+        "display(HTML(response))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 100
+        },
+        "id": "rM6S8ljaqZ2l",
+        "outputId": "adfce87c-199e-4238-8d8d-252187e059b5"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<html>\n",
+              "<head>\n",
+              "  <title>Restaurant Employees</title>\n",
+              "</head>\n",
+              "<body>\n",
+              "  <table>\n",
+              "    <tr>\n",
+              "      <th>Name</th>\n",
+              "      <th>Email</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>Shyam</td>\n",
+              "      <td>shyamjaiswal@gmail.com</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>Bob</td>\n",
+              "      <td>bob32@gmail.com</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>Jai</td>\n",
+              "      <td>jai87@gmail.com</td>\n",
+              "    </tr>\n",
+              "  </table>\n",
+              "</body>\n",
+              "</html>"
+            ]
+          },
+          "metadata": {}
         }
       ]
     },
@@ -484,16 +533,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0bRuaEDfmwNj",
-        "outputId": "7df9c19e-7ff8-49b5-abf8-8de1f5e631e1"
+        "outputId": "1577467a-b80e-41bc-800f-ec3acf8ded2d"
       },
-      "execution_count": 13,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The girl with the black and white puppies has a ball.\n",
-            "No errors found.\n",
+            "No errors found\n",
             "No errors found.\n",
             "Their goes my freedom. There going to bring they’re suitcases.\n",
             "\n",
@@ -527,9 +576,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iurFXOEcm8Rh",
-        "outputId": "dc7d6870-061f-414a-b8a1-4beb04d78a6a"
+        "outputId": "4f2a0a18-2480-45c2-ee31-28043bc1c376"
       },
-      "execution_count": 14,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,26 +599,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P0Sc04_QnEt0",
-        "outputId": "28effe35-dbd5-4ce7-deda-210278c64595"
+        "outputId": "8589b235-eda1-4816-890d-109055a6883b"
       },
-      "execution_count": 16,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting redlines\n",
-            "  Downloading redlines-0.4.2-py3-none-any.whl (8.0 kB)\n",
+            "Requirement already satisfied: redlines in /usr/local/lib/python3.10/dist-packages (0.4.2)\n",
             "Requirement already satisfied: click<9.0.0,>=8.1.3 in /usr/local/lib/python3.10/dist-packages (from redlines) (8.1.7)\n",
             "Requirement already satisfied: rich<14.0.0,>=13.3.5 in /usr/local/lib/python3.10/dist-packages (from redlines) (13.7.1)\n",
-            "Collecting rich-click<2.0.0,>=1.6.1 (from redlines)\n",
-            "  Downloading rich_click-1.7.4-py3-none-any.whl (32 kB)\n",
+            "Requirement already satisfied: rich-click<2.0.0,>=1.6.1 in /usr/local/lib/python3.10/dist-packages (from redlines) (1.7.4)\n",
             "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.10/dist-packages (from rich<14.0.0,>=13.3.5->redlines) (3.0.0)\n",
             "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.10/dist-packages (from rich<14.0.0,>=13.3.5->redlines) (2.16.1)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from rich-click<2.0.0,>=1.6.1->redlines) (4.10.0)\n",
-            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.10/dist-packages (from markdown-it-py>=2.2.0->rich<14.0.0,>=13.3.5->redlines) (0.1.2)\n",
-            "Installing collected packages: rich-click, redlines\n",
-            "Successfully installed redlines-0.4.2 rich-click-1.7.4\n"
+            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.10/dist-packages (from markdown-it-py>=2.2.0->rich<14.0.0,>=13.3.5->redlines) (0.1.2)\n"
           ]
         }
       ]
@@ -584,9 +629,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "damjQQbJnYoE",
-        "outputId": "114d4cf1-e434-4e3d-d7ff-cfab21a01c9e"
+        "outputId": "d6f1465d-60b0-42e7-ff97-693c55908fe1"
       },
-      "execution_count": 20,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,10 +639,8 @@
           "text": [
             "Requirement already satisfied: IPython in /usr/local/lib/python3.10/dist-packages (7.34.0)\n",
             "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.10/dist-packages (from IPython) (67.7.2)\n",
-            "Collecting jedi>=0.16 (from IPython)\n",
-            "  Downloading jedi-0.19.1-py2.py3-none-any.whl (1.6 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: decorator in /usr/local/lib/python3.10/dist-packages (from IPython) (4.4.2)\n",
+            "Requirement already satisfied: jedi>=0.16 in /usr/local/lib/python3.10/dist-packages (from IPython) (0.19.1)\n",
+            "Requirement already satisfied: decorator in /usr/local/lib/python3.10/dist-packages (from IPython) (4.4.2)\n",
             "Requirement already satisfied: pickleshare in /usr/local/lib/python3.10/dist-packages (from IPython) (0.7.5)\n",
             "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.10/dist-packages (from IPython) (5.7.1)\n",
             "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from IPython) (3.0.43)\n",
@@ -607,9 +650,7 @@
             "Requirement already satisfied: pexpect>4.3 in /usr/local/lib/python3.10/dist-packages (from IPython) (4.9.0)\n",
             "Requirement already satisfied: parso<0.9.0,>=0.8.3 in /usr/local/lib/python3.10/dist-packages (from jedi>=0.16->IPython) (0.8.3)\n",
             "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.10/dist-packages (from pexpect>4.3->IPython) (0.7.0)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.10/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->IPython) (0.2.13)\n",
-            "Installing collected packages: jedi\n",
-            "Successfully installed jedi-0.19.1\n"
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.10/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->IPython) (0.2.13)\n"
           ]
         }
       ]
@@ -622,7 +663,7 @@
       "metadata": {
         "id": "CO6YmWZanbvg"
       },
-      "execution_count": 21,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -637,9 +678,9 @@
           "height": 98
         },
         "id": "6FaLHH40nN2y",
-        "outputId": "436fdd48-6cd7-4f3c-8d5b-419362b6cade"
+        "outputId": "a7d823e3-ad6c-43c0-da11-4158fad7aef1"
       },
-      "execution_count": 22,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "display_data",
@@ -668,12 +709,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 133
+          "height": 116
         },
         "id": "sDT8fAePnh-i",
-        "outputId": "a3567b31-f03c-4b56-8741-3e599123a4f1"
+        "outputId": "8fec1149-4bec-4f13-99be-97b62b7d1ca8"
       },
-      "execution_count": 23,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "display_data",
@@ -681,7 +722,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "I purchased this adorable panda plush as a birthday gift for my daughter, as she kept borrowing mine from my room. It's worth noting that adults can also appreciate the charm of pandas. The plush is incredibly soft and cute, and my daughter carries it everywhere with her. However, I did notice that one of the ears is slightly lower than the other, which seems unintentional. Despite its minor flaw, I found the size to be a bit smaller than expected given the price point. I believe there may be larger options available for the same cost. On a positive note, the plush arrived a day earlier than anticipated, allowing me to enjoy it briefly before passing it on to my daughter. Overall, while there are some minor drawbacks, the quality and cuteness of this panda plush make it a delightful gift option for panda enthusiasts of all ages."
+            "text/markdown": "I purchased this adorable panda plush as a birthday gift for my daughter, as she kept borrowing mine from my room. It's worth noting that adults can also appreciate the charm of pandas. The plush is incredibly soft and cute, becoming my daughter's constant companion. However, I did notice a slight asymmetry in the ears, which I believe was not intentional in the design. Additionally, considering the price paid, I found the size to be a bit smaller than expected. There may be larger options available at the same price point. Despite this, the plush arrived a day earlier than anticipated, allowing me to enjoy its cuddly features before gifting it to my daughter. Overall, while there are minor flaws, the early delivery and undeniable cuteness of the panda make it a worthwhile purchase."
           },
           "metadata": {}
         }
