--- a/Customized_Automatic_Emails.ipynb
+++ b/Customized_Automatic_Emails.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtd7tWam4K8jQ3vg2SdqPS",
+      "authorship_tag": "ABX9TyPgum29MPXyKlFukq8li4d/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def get_completion(prompt, model=\"gpt-3.5-turbo\",temperature=0): # Andrew mentioned that the prompt/ completion paradigm is preferable for this class\n",
+        "def get_completion(prompt, model=\"gpt-3.5-turbo\",temperature=0):\n",
         "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
         "    response = openai.ChatCompletion.create(\n",
         "        model=model,\n",
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "diBCv8N1r_a5"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": []
     },
     {
